Mobile overflow fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,7 @@
 * {
   font-family: Lato, sans-serif;
 }
+
+#root {
+  overflow: hidden;
+}
